<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="theme"
            type="com.ketch.android.ui.theme.ColorTheme" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp">

            <TextView
                android:id="@+id/bodyTitle"
                style="@style/H3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invoke_right_sent_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:textColor="@{theme.bodyTextColor}" />

            <TextView
                android:id="@+id/bodyDescription"
                style="@style/Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/invoke_right_sent_description"
                app:layout_constraintBottom_toTopOf="@+id/newRequestButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bodyTitle"
                app:textColor="@{theme.bodyTextColor}"
                app:textColorLink="@{theme.bodyLinkColor}"
                tools:text="Welcome! We’re glad you’re here and want you to know that we respect your privacy and your right to control how we collect, use, and share your personal data." />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/newRequestButton"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/invoke_right_submit_new_request"
                android:textAllCaps="false"
                app:backgroundColor="@{theme.firstButtonBackgroundColor}"
                app:borderRadius="@{theme.buttonBorderRadius}"
                app:layout_constraintBottom_toTopOf="@+id/exitSettingsButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bodyDescription"
                app:strokeColor="@{theme.firstButtonBorderColor}"
                app:strokeWidth="1dp"
                app:textColor="@{theme.firstButtonTextColor}" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/exitSettingsButton"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/exit_settings"
                android:textAllCaps="false"
                app:backgroundColor="@{theme.secondButtonBackgroundColor}"
                app:borderRadius="@{theme.buttonBorderRadius}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newRequestButton"
                app:strokeColor="@{theme.secondButtonBorderColor}"
                app:strokeWidth="1dp"
                app:textColor="@{theme.secondButtonTextColor}" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>