<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="theme"
            type="com.ketch.android.ui.theme.ColorTheme" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/purposeTitle"
            style="@style/H4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/purposes"
            app:layout_constraintBottom_toBottomOf="@+id/acceptAllButton"
            app:layout_constraintEnd_toStartOf="@+id/rejectAllButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/acceptAllButton"
            app:textColor="@{theme.bodyTextColor}" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rejectAllButton"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/reject_all"
            android:textAllCaps="false"
            app:backgroundColor="@{theme.rejectAllButtonBackgroundColor}"
            app:borderRadius="@{theme.buttonBorderRadius}"
            app:layout_constraintBottom_toBottomOf="@+id/acceptAllButton"
            app:layout_constraintEnd_toStartOf="@+id/acceptAllButton"
            app:layout_constraintTop_toTopOf="@+id/acceptAllButton"
            app:strokeColor="@{theme.rejectAllButtonBorderColor}"
            app:strokeWidth="1dp"
            app:textColor="@{theme.rejectAllButtonTextColor}" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/acceptAllButton"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:text="@string/accept_all"
            android:textAllCaps="false"
            app:backgroundColor="@{theme.acceptAllButtonBackgroundColor}"
            app:borderRadius="@{theme.buttonBorderRadius}"
            app:layout_constraintBottom_toTopOf="@+id/purposesList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@{theme.acceptAllButtonBorderColor}"
            app:strokeWidth="1dp"
            app:textColor="@{theme.acceptAllButtonTextColor}" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/purposesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:itemAnimator="@{null}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/acceptAllButton"
            tools:itemCount="3"
            tools:listitem="@layout/view_list_purpose_row" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>